src/TreeInterface/TreeGUI.css
.treegui-container {
  background-color: #ffffff;
}

.node-container {
  padding-top: 40px;
  padding-left: 10px;
  padding-right: 5px;
}

.node-row {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-start;
}

.node {
  display: inline-block;
}

.node-name {
  padding: 10px;
}

#delete {
  float: right;
  padding: 2px 5px;
  background: #ccc;
}

